modified dashboard to show the correct target consumption value, and the way to show the right ammount of smilies.

--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% addtoblock "css" %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/custom_03_01.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/custom_uc03_01.css">
 {% endaddtoblock %}
 <div class="panel panel-default">
     <!-- chart menu/toolbar -->
