Almost finished with comparison charts. Need to fix summer/winter titles.

--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -290,7 +290,7 @@
             var endyear1 = $("#c_uc31endyear").val();
             var stmonth2 = $("#c_uc31stmonth2").val();
             var styear2 = $("#c_uc31styear2").val();
-            var endmonth2 = $("#uc31endmonth2").val();
+            var endmonth2 = $("#c_uc31endmonth2").val();
             var endyear2 = $("#c_uc31endyear2").val();
             var sw_styear1 = $("#c_uc31swyear1from").val();
             var sw_endyear1 = $("#c_uc31swyear1to").val();
