--- a/uc_03_1/templates/_charts_.html
+++ b/uc_03_1/templates/_charts_.html
@@ -2,12 +2,16 @@
 <div id="c_uc31cont" class="row">
     <div id="c_uc31title"><p class="bg-primary text-center"><strong>{{ title }}</strong></p></div>
     <div class="col-md-12" id="placeholder" style="width: 100%; height: 300px; margin-bottom: 80px"> </div>
-    {% if total_data2 %}
-        <div class="col-md-12" id="placeholder2" style="width: 100%; height: 300px; margin-bottom: 80px"> </div>
-    {% endif %}
 </div>
+{% if total_data2 %}
+    <div class="row">
+        <div><p class="bg-primary text-center"><strong>{{ title2 }}</strong></p></div>
+        <div class="col-md-12" id="placeholder2" style="width: 100%; height: 300px; margin-bottom: 80px"> </div>
+    </div>
+{% endif %}
 <div class="row">
-    <div class="{% if view != "day_night" %}col-md-12{% else %}col-md-6{% endif %}">
+    <div class="col-md-6">
+        <h4>1. {{ title }}</h4>
         <table class="table">
             <tr>
                 <th>
@@ -45,10 +49,58 @@
             {% endfor %}
         </table>
     </div>
+    {% if cons_table_data2 %}
+        <div class="col-md-6">
+            <h4>2. {{ title2 }}</h4>
+            <table class="table">
+                <tr>
+                    <th>
+                        {% trans "Measurement Period" %}
+                    </th>
+                    <th>
+                        {% trans "Total Consumption" %}
+                    </th>
+                    {% if view == "day_night"  %}
+                        <th>
+                            {% trans "Day Consumption" %}
+                        </th>
+                        <th>
+                            {% trans "Night Consumption" %}
+                        </th>
+                    {% endif %}
+                </tr>
+                {% for d in cons_table_data2 %}
+                    <tr>
+                        <td>
+                            {{ d.0 }}
+                        </td>
+                        <td>
+                            {{ d.1|floatformat:3 }} {% if "cost" in step %} &euro; {% else %} m&#179; {% endif %}
+                        </td>
+                        {% if view == "day_night"  %}
+                            <td>
+                                {{ d.2|floatformat:2 }} {% if "cost" in step %} &euro; {% else %} m&#179; {% endif %}
+                            </td>
+                            <td>
+                                {{ d.3|floatformat:2 }} {% if "cost" in step %} &euro; {% else %} m&#179; {% endif %}
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+    {% endif %}
+</div>
+<div class="row">
     {% if view == "day_night" %}
         <div class="col-md-6" id="pie" style="width: 40%; height: 400px; padding-top: 40px; margin-top: 40px">
 
         </div>
+        {% if day_total2 and night_total2 %}
+            <div class="col-md-6" id="pie2" style="width: 40%; height: 400px; padding-top: 40px; margin-top: 40px">
+
+            </div>
+        {% endif %}
     {% endif %}
 </div>
 <script>
@@ -132,6 +184,47 @@
                     }
                 }
             });
+        {% if summer_total and winter_total %}
+            $.plot("#placeholder2", [
+                        { label: " - Summer Consumption in m&#179;", data: [ [1, {{ summer_total2|floatformat:2 }}] ] },
+                        { label: " - Winter Consumption in m&#179;", data: [ [2, {{ winter_total2|floatformat:2 }}] ] }
+                    ],
+                    {
+                        series: {
+                            bars: {
+                                show: true,
+                                align: "center",
+                                fill: true,
+                                barWidth: 0.6
+                            }
+                        },
+                        xaxis: {
+                            min: 0,
+                            max: 5,
+                            ticks: [
+                                [1, "Summer" ], [ 2, "Winter" ]
+                            ],
+                            tickDecimals: 0
+                        },
+                        yaxis: {
+                            ticks: 10,
+                            min: 0,
+                            max: {{ max_val }},
+                            tickDecimals: 5
+                        },
+                        grid: {
+                            hoverable: true,
+                            clickable: false,
+                            backgroundColor: { colors: [ "#fff", "#eee" ] },
+                            borderWidth: {
+                                top: 1,
+                                right: 1,
+                                bottom: 2,
+                                left: 2
+                            }
+                        }
+                    });
+        {% endif %}
     {% else %}
         total_label = " - Total Consumption in m&#179;";
         night_label = " - Night Consumption in m&#179;";
@@ -248,7 +341,27 @@
                 show: false
             }
         });
+        {% if day_total2 and night_total2 %}
+            var pie_data2 = [
+                { label: "Night Consumption",  data: {{ night_total2 }}, color: "#7580cc" },
+                { label: "Day Consumption",  data: {{ day_total2 }}, color: "#cc823d"}
+            ];
+
+            var pie_chart2 = $("#pie2");
+
+            $.plot(pie_chart2, pie_data2, {
+                series: {
+                    pie: {
+                        show: true
+                    }
+                },
+                legend: {
+                    show: false
+                }
+            });
+        {% endif %}
     {% endif %}
+
 
     {% if step == "15min" %}
         $(".flot-x-axis .flot-tick-label").addClass("x-axis-rotate");
