--- a/unexe/templates/base.html
+++ b/unexe/templates/base.html
@@ -9,7 +9,7 @@
 {% addtoblock "css" %}
 	<!-- Bootstrap minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-	<!-- Bootstrap minified Optional theme -->
+	<!-y Bootstrap minified Optional theme -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 	<!-- jQuery UI css -->
  	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
