--- a/unexe/templates/index.html
+++ b/unexe/templates/index.html
@@ -20,7 +20,7 @@
                     <fieldset>
                         <div class="input-group form-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input class="form-control" placeholder="Username" name="username" id="username" type="text" required="true">
+                            <input class="form-control" placeholder="Username" name="username" id="username" type="text" required="true" value="{{ username }}">
                         </div>
                         <div class="input-group form-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
