--- a/unexe/templates/summary.html
+++ b/unexe/templates/summary.html
@@ -175,6 +175,7 @@
 
     <div class="panel panel-default">
         <div class="panel-heading"><div class="panel-title">{% trans "ELECTRICITY" %}</div></div>
+        haha
         <div class="panel-body">
         </div>
     </div>
